// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should fail to login with broken private key 1`] = `
Array [
  Array [
    "Logging in to:",
    "http://localhost:8080",
  ],
  Array [
    "Error logging in!",
    "Error generating login token! Make sure your private key password is correct",
    "Error: ENOENT: no such file or directory, open 'asd'",
  ],
]
`;

exports[`Should login 1`] = `
Array [
  Array [
    "Logging in to:",
    "http://localhost:8080",
  ],
  Array [
    "Successfully logged in!",
  ],
]
`;

exports[`Should login and update endpoint when endpoint was provided 1`] = `
Array [
  Array [
    "Updating endpoint URL to:",
    "http://my-awesome-endpoint",
  ],
  Array [
    "Endpoint URL updated!",
  ],
  Array [
    "Logging in to:",
    "http://my-awesome-endpoint",
  ],
  Array [
    "Successfully logged in!",
  ],
]
`;

exports[`Should login using key with passphrase 1`] = `
Array [
  Array [
    "Logging in to:",
    "http://localhost:8080",
  ],
  Array [
    "Successfully logged in!",
  ],
]
`;

exports[`Should not login with wrong certificate 1`] = `
Array [
  Array [
    "Logging in to:",
    "http://localhost:8080",
  ],
  Array [
    "Error logging in!",
    "Check your username and password and try again.",
    "HTTPError: Response code 401 (Unauthorized)",
  ],
]
`;
